
- Date:
  . Fixed bug #74404 (Wrong reflection on DateTimeZone::getTransitions).
    (krakjoe)

- DOM:
  . Fixed bug #74416 (Wrong reflection on DOMNode::cloneNode).
    (Remi, Fabien Villepinte)

- Fileinfo:
  . Fixed bug #74379 (syntax error compile error in libmagic/apprentice.c).
    (Laruence)

- GD:
  . Fixed bug #74343 (compile fails on solaris 11 with system gd2 library).
    (krakjoe)

- MySQLnd:
  . Fixed bug #74376 (Invalid free of persistent results on error/connection
    loss). (Yussuf Khalil)

- OpenSSL:
  . Fixed bug #74341 (openssl_x509_parse fails to parse ASN.1 UTCTime without
    seconds). (Moritz Fain)

- phar:
  . Fixed bug #74383 (phar method parameters reflection correction). 
    (mhagstrand)

- Standard:
  . Fixed bug #74409 (Reflection information for ini_get_all() is incomplete).
    (Sebastian Bergmann)

- SQLite3:
  . Fixed bug #74413 (incorrect reflection for SQLite3::enableExceptions).
    (krakjoe)

13 Apr 2017 PHP 7.0.18

- Core:
  . Fixed bug #73370 (falsely exits with "Out of Memory" when using
    USE_ZEND_ALLOC=0). (Nikita)
  . Fixed bug #73960 (Leak with instance method calling static method with
    referenced return). (Nikita)
  . Fixed bug #74265 (Build problems after 7.0.17 release: undefined reference
    to `isfinite'). (Nikita)
  . Fixed bug #74302 (yield fromLABEL is over-greedy). (Sara)

- Apache:
  . Reverted patch for bug #61471, fixes bug #74318. (Anatol)

- Date:
  . Fixed bug #72096 (Swatch time value incorrect for dates before 1970). (mcq8)

- DOM:
  . Fixed bug #74004 (LIBXML_NOWARNING flag ingnored on loadHTML*).
    (somedaysummer)

- iconv:
  . Fixed bug #74230 (iconv fails to fail on surrogates). (Anatol)

- OCI8:
  . Fixed uninitialized data causing random crash. (Dmitry)

- OpenSSL:
  . Fixed bug #72333 (fwrite() on non-blocking SSL sockets doesn't work).
    (Jakub Zelenka)

- PDO MySQL:
  . Fixed bug #71003 (Expose MYSQLI_CLIENT_SSL_DONT_VERIFY_SERVER_CERT to PDO
    interface). (Thomas Orozco)
