@@ -21,6 +21,9 @@ PHP                                                                        NEWS
   . Fixed bug #74343 (compile fails on solaris 11 with system gd2 library).
     (krakjoe)
 
+- intl:
+  . Fixed bug #74433 (wrong reflection for Normalizer methods). (villfa)
+
 - MySQLnd:
   . Fixed bug #74376 (Invalid free of persistent results on error/connection
     loss). (Yussuf Khalil)
